# testing-flutter

./: README.md
app/: Dockerfile  Dockerfile.builder  Dockerfile.local  README.md  build.sh  pubspec.yaml  version.sh
app/lib/: app.dart  main.dart
app/lib/data/: login.dart
app/lib/features/authenticate/controller/: auth_controller.dart  auth_controller.g.dart
app/lib/features/authenticate/data/: auth_repository.dart  auth_repository.g.dart
app/lib/features/authenticate/domain/: user.dart  user.freezed.dart  validators.dart
app/lib/features/authenticate/presentation/: auth_form_screen.dart  auth_screen.dart  welcome_screen.dart
app/lib/logic/login/: login.dart
app/lib/presentation/: home.dart  login.dart  welcome.dart
app/test/features/authenticate/: validators_test.dart
app/test/login/: form_validators_test.dart
backend/: Cargo.toml  README.md
backend/src/: main.rs
deployment/app/: deployment.yaml  ingress.yaml  service.yaml
deployment/compose/: .gitignore  README.md  docker-compose.yaml
deployment/compose/prometheus/: prometheus.yaml
deployment/compose/traefik/: traefik.yaml
deployment/k8s/: README.md  testing-flutter-namespace.yaml
deployment/k8s/app/: ingress.yaml
deployment/k8s/prometheus/: config-map.yaml  deployment.yaml  ingress.yaml  role-binding.yaml  role.yaml  service-account.yaml  service.yaml
deployment/k8s/traefik/: dashboard-service.yaml  deployment.yaml  web-service.yaml
deployment/k8s/whoami/: deployment.yaml  ingress.yaml  service.yaml
deployment/traefik/: role-binding.yaml  service-account.yaml
(+5 files in other folders)
