[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version= "0.6.9", features = ["macros"] }
chrono = "0.4.23"
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.8.5"
serde = "1.0.152"
sha2 = "0.10.6"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
